# WeatherForecastApp

./: CMakeLists.txt  README.md
cfg/: cfg_1.json  cfg_2.json  cfg_3.json
lib/: CMakeLists.txt  config_parser.cpp  config_parser.h  interface_processing.cpp  interface_processing.h  request_processing.cpp  request_processing.h
lib/include/: config_parser.h  request_processing.h
lib/src/: config_parser.cpp  interface_processing.cpp  request_processing.cpp
